# MathCalculator

./: CMakeLists.txt  CMakeUserPresets.json  Complex.h  Mainwindow.cpp  Mainwindow.h  Matrix.h  MatrixTab.cpp  MatrixTab.h  OperationHistory.cpp  OperationHistory.h  Polynom.h  PolynomialTab.cpp  PolynomialTab.h  main.cpp
.qtcreator/: CMakeLists.txt.user.2fe00da
tests/: test_matrix.cpp  test_polynom.cpp
